--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: chat_bubbles
 description: Flutter chat bubble widgets, similar to Whatsapp and more shapes. Easy to use and implement
   chat bubbles.
-version: 1.7.0
-homepage: https://github.com/prahack/chat_bubbles
+version: 2.0.0
+homepage: https://github.com/WEBGLF/multi_chat_bubbles.git
 
 environment:
   sdk: ">=2.12.0 <4.0.0"
